--- a/backend_dotnet/HRMApi/appsettings.json
+++ b/backend_dotnet/HRMApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=hr_management;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=hrm;Username=postgres;Password=123456"
   },
   "Logging": {
     "LogLevel": {
